--- a/index.html
+++ b/index.html
@@ -51,29 +51,22 @@
         }
         .nav-btn:hover, .nav-btn.active { background-color: rgba(255, 235, 100, 1); transform: translateY(-2px); }
 
-        /* --- PAGE LAYOUT (CENTER-BOTTOM FIX) --- */
+        /* --- PAGE LAYOUT --- */
         .page {
             width: 100%; min-height: 100vh; background-size: cover; background-position: center;
             background-repeat: no-repeat; position: relative; 
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 120px 20px 80px 20px; /* Top padding for nav, bottom for breathing room */
+            display: flex; flex-direction: column; align-items: center;
+            padding: 120px 20px 80px 20px;
         }
 
         .headline {
             text-align: center; color: white; font-size: clamp(2.2rem, 5vw, 3.5rem);
             font-weight: bold; text-shadow: 0 4px 10px rgba(0, 0, 0, 0.8); 
-            line-height: 1.2; 
-            margin-bottom: auto; /* Pushes everything below it to the bottom */
+            line-height: 1.2; margin-bottom: auto;
         }
 
         .bottom-content-area {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 40px; /* Space between headline and body if they get close */
+            width: 100%; display: flex; flex-direction: column; align-items: center; margin-top: 40px;
         }
 
         .body-text {
@@ -88,17 +81,38 @@
             text-align: center; position: absolute; z-index: 10;
         }
 
-        /* --- CAROUSEL STYLES --- */
-        .carousel-container {
-            width: 100%; overflow-x: auto; display: flex; gap: 20px; padding: 20px 40px;
-            scrollbar-width: thin; scrollbar-color: #ffeb64 transparent; z-index: 10;
+        /* --- REELS GRID SYSTEM --- */
+        .reels-grid-container {
+            width: 100%;
+            max-width: 1400px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            margin-top: 20px;
+            z-index: 10;
         }
-        .carousel-container::-webkit-scrollbar { height: 6px; }
-        .carousel-container::-webkit-scrollbar-thumb { background: #ffeb64; border-radius: 10px; }
-        
-        .reel-card { flex: 0 0 450px; background: rgba(255, 255, 255, 0.05); border-radius: 20px; padding: 15px; border: 1px solid rgba(255,255,255,0.1); }
-        .reel-card iframe { width: 100%; border-radius: 12px; aspect-ratio: 16/9; }
-        .reel-title { color: #ffeb64; margin-top: 10px; font-weight: bold; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px; }
+
+        .reels-row {
+            display: grid;
+            gap: 20px;
+            width: 100%;
+        }
+
+        /* Top row: 4 columns */
+        .row-top { grid-template-columns: repeat(4, 1fr); }
+        /* Bottom row: 5 columns */
+        .row-bottom { grid-template-columns: repeat(5, 1fr); }
+
+        .reel-card {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 15px;
+            padding: 10px;
+            border: 1px solid rgba(255,255,255,0.1);
+            transition: transform 0.3s ease;
+        }
+        .reel-card:hover { transform: scale(1.03); background: rgba(255, 255, 255, 0.1); }
+        .reel-card iframe { width: 100%; border-radius: 10px; aspect-ratio: 16/9; display: block; }
+        .reel-title { color: #ffeb64; margin-top: 8px; font-weight: bold; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; text-align: center; }
 
         /* Backgrounds */
         #page1 { background-image: url('https://raw.githubusercontent.com/newhdfilms/the-conduit-collective/main/images/page1.jpg'); }
@@ -107,25 +121,17 @@
         #page4 { background-image: url('https://raw.githubusercontent.com/newhdfilms/the-conduit-collective/main/images/page4.jpg'); }
         #reels { 
             background: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), repeating-linear-gradient(45deg, #111 0px, #111 2px, transparent 2px, transparent 10px);
+            justify-content: flex-start; /* Changed to start so content flows down */
         }
         #page5 { background-image: url('https://raw.githubusercontent.com/newhdfilms/the-conduit-collective/main/images/page5.jpg'); }
 
-        @media (min-width: 769px) {
-            #page2 .talk-bubble { top: 15%; right: 10%; }
-            #page3 .talk-bubble { top: 25%; right: 10%; }
-            #page4 .talk-bubble { top: 35%; right: 10%; }
+        /* Tablet/Mobile Responsiveness */
+        @media (max-width: 1100px) {
+            .row-top, .row-bottom { grid-template-columns: repeat(2, 1fr); }
         }
-
-        .form-container { background-color: rgba(0, 0, 0, 0.7); padding: 30px; border-radius: 20px; width: 100%; max-width: 450px; border: 1px solid rgba(255,255,255,0.1); }
-        .form-group { margin-bottom: 15px; }
-        .form-group label { display: block; color: white; margin-bottom: 5px; font-size: 0.9rem; }
-        .form-group input, .form-group textarea { width: 100%; padding: 12px; border-radius: 8px; border: none; background: rgba(255,255,255,0.9); }
-        .submit-btn { width: 100%; padding: 15px; background: #ffeb64; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1rem; }
-
-        @media (max-width: 768px) {
-            .nav-btn { padding: 8px 12px; font-size: 0.75rem; }
-            .talk-bubble { position: relative; top: 0 !important; right: 0 !important; margin: 20px auto; order: -1; }
-            .reel-card { flex: 0 0 85vw; }
+        @media (max-width: 600px) {
+            .row-top, .row-bottom { grid-template-columns: 1fr; }
+            .nav-btn { padding: 8px 10px; font-size: 0.7rem; }
         }
     </style>
 </head>
@@ -151,11 +157,7 @@
     <section id="page1" class="page">
         <h1 class="headline">The Future of Advertising<br>has Arrived</h1>
         <div class="bottom-content-area">
-            <div class="body-text">
-                The Conduit Collective is the Next Generation Digital Advertising Agency.<br>
-                We are Mobility Focused, powered by CAD-based Digital Twins,<br>
-                integrated into Real Time Configurators, and driven by Generative AI
-            </div>
+            <div class="body-text">The Conduit Collective is the Next Generation Digital Advertising Agency.<br>Mobility Focused, powered by CAD-based Digital Twins, integrated into Real Time Configurators, and driven by Generative AI.</div>
         </div>
     </section>
 
@@ -163,7 +165,7 @@
         <h1 class="headline">One Configurator<br>Every Use Case</h1>
         <div class="talk-bubble">Validate • Create<br>Interact • LoRA</div>
         <div class="bottom-content-area">
-            <div class="body-text">Our process begins with Production Accurate CAD data, transformed into a High Fidelity Digital Twin and deployed within a Real Time Configurator. This single system supports internal Product Validation, high-end Creative Development, consumer-facing Interactive Experiences, and downstream AI LoRA Model Training.</div>
+            <div class="body-text">Our process begins with Production Accurate CAD data, transformed into a High Fidelity Digital Twin and deployed within a Real Time Configurator. This single system supports internal Product Validation, high-end Creative Development, and downstream AI LoRA Model Training.</div>
         </div>
     </section>
 
@@ -171,7 +173,7 @@
         <h1 class="headline">State of the Art<br>Generative AI Media</h1>
         <div class="talk-bubble">Print • Streaming<br>Digital • Social</div>
         <div class="bottom-content-area">
-            <div class="body-text">Our configurator trains a Branded AI Model that produces and distributes Product-Accurate, Photorealistic Content across Every Media Channel from a Centralized Cloud. Unmatched Scalability, Creative Consistency, and Speed to Market.</div>
+            <div class="body-text">Our configurator trains a Branded AI Model that produces and distributes Product-Accurate, Photorealistic Content across Every Media Channel from a Centralized Cloud. Unmatched Scalability and Speed to Market.</div>
         </div>
     </section>
 
@@ -184,17 +186,21 @@
     </section>
 
     <section id="reels" class="page">
-        <h1 class="headline">AI Generated Reels</h1>
-        <div class="carousel-container">
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/qMrQIKzTXWM" frameborder="0" allowfullscreen></iframe><div class="reel-title">Conduit Collective Reel</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/Fa_qozZo8QU" frameborder="0" allowfullscreen></iframe><div class="reel-title">Save the Robots</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/odTiZQI60fs" frameborder="0" allowfullscreen></iframe><div class="reel-title">Dogged Vine Winery</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/o1Mif0xfzvU" frameborder="0" allowfullscreen></iframe><div class="reel-title">Dogged Vine Winery Part 2</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/trnBZc4eVPc" frameborder="0" allowfullscreen></iframe><div class="reel-title">Culture Pop Soda</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/j5KvO62Nkak" frameborder="0" allowfullscreen></iframe><div class="reel-title">Scrubby the Bubble</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/zossDzY27qk" frameborder="0" allowfullscreen></iframe><div class="reel-title">Gangsta Music Video</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/QfGLgfSaT40" frameborder="0" allowfullscreen></iframe><div class="reel-title">Penn State Promo</div></div>
-            <div class="reel-card"><iframe src="https://www.youtube.com/embed/03kmgB702wk" frameborder="0" allowfullscreen></iframe><div class="reel-title">Clean Air Project</div></div>
+        <h1 class="headline" style="margin-bottom: 40px;">AI Generated Reels</h1>
+        <div class="reels-grid-container">
+            <div class="reels-row row-top">
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/qMrQIKzTXWM" frameborder="0" allowfullscreen></iframe><div class="reel-title">Conduit Collective Reel</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/Fa_qozZo8QU" frameborder="0" allowfullscreen></iframe><div class="reel-title">Save the Robots</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/odTiZQI60fs" frameborder="0" allowfullscreen></iframe><div class="reel-title">Dogged Vine Winery</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/o1Mif0xfzvU" frameborder="0" allowfullscreen></iframe><div class="reel-title">Dogged Vine Winery 2</div></div>
+            </div>
+            <div class="reels-row row-bottom">
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/trnBZc4eVPc" frameborder="0" allowfullscreen></iframe><div class="reel-title">Culture Pop Soda</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/j5KvO62Nkak" frameborder="0" allowfullscreen></iframe><div class="reel-title">Scrubby the Bubble</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/zossDzY27qk" frameborder="0" allowfullscreen></iframe><div class="reel-title">Gangsta Music Video</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/QfGLgfSaT40" frameborder="0" allowfullscreen></iframe><div class="reel-title">Penn State Promo</div></div>
+                <div class="reel-card"><iframe src="https://www.youtube.com/embed/03kmgB702wk" frameborder="0" allowfullscreen></iframe><div class="reel-title">Clean Air Project</div></div>
+            </div>
         </div>
     </section>
 
